Remove trick of padding for subtitled network title view

It seems this causes repositions of the toggle buttons when
subtitles are set / cleared.

Bug: 823656
Change-Id: Id987bd7f6291d4debdfb17d7fac34daedbe21117
Reviewed-on: https://chromium-review.googlesource.com/978889
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545653}
Former-commit-id: af34e503c321c62c9238816784c223d6caae5255